# dlt-course

./: pyproject.toml
lesson_1/: duck_db_con.py  notes.md  pipeline.py
