[tool.poetry]
name = "dlt-course"
version = "0.1.0"
description = ""
authors = ["edugonzaloalmorox <eduardogonzaloalmorox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.2.1"
pandas = "^2.2.3"
dlt = "^1.5.0"
google = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
